css/style.css
/* Fonts */
@font-face {
  font-family: 'PlayFair';
  src: url(/assets/fonts/PlayFair/PlayfairDisplay-VariableFont_wght.ttf);
}

/* Global variables */

:root {
  /* Colores principales */
  --color-primary: #356D94;
  --color-primary-light: #A7C5D0;
  --color-primary-lighter: #ECF1F5;

  /* Neutrales */
  --color-white: #FFFFFF;
  --color-black: #000000;
  --color-gray: #a1a1a1;

  /* Fondo */
  --color-bg-main: #F5FAFF;
  --color-bg-secondary: #ECF1F5;

  /* Texto */
  --text-color-main: #333333;
  --text-color-light: #a1a1a1;
  --text-color-white: #FFFFFF;

  /* Layout */
  --max-width: 1200px;
  --border-radius: 20px;

  /* Spacing*/
  --spacing-xs: 0.5rem;
  --spacing-sm: 1rem;
  --spacing-md: 2rem;
  --spacing-lg: 4rem;

  /* Transiciones */
  --transition: all 0.3s ease;
}

/* Reset básico */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: var(--color-bg-main);
  font-family: sans-serif;
  line-height: 1.5;
}

a {
  text-decoration: none;
  color: inherit;
}

li {
  list-style: none;
}

img {
  max-width: 100%;
  display: block;
}

button {
  border: none;
  background: none;
  cursor: pointer;
}

/* Container reutilizable */
.container {
  max-width: var(--max-width);
  margin: 0 auto;
  padding: 0 var(--spacing-md);
}

.navbar {
  margin-top: var(--spacing-md);
}

.navbar__container {
  display: flex;
  
  padding: var(--spacing-sm) var(--spacing-md);

  justify-content: space-between;
  align-items: center;

  background-color: var(--color-bg-secondary);
  border-radius: var(--border-radius);
}

.navbar__menu {
  display: flex;
  gap: var(--spacing-sm);
}

.navbar__link {
  color: var(--text-color-light);
  transition: var(--transition);
}

.navbar__link:hover {
  color: var(--color-primary);
}

.navbar__logo-link {
  display: flex;
  align-items: center;
  gap: var(--spacing-xs);
  font-size: 2rem;
  color: var(--text-color-main);
}

.navbar__logo-img {
  width: 30px;
  height: 40px;
}

.navbar__actions {
  display: flex;
  gap: var(--spacing-sm);
}

.navbar__search {
  display: flex;
  align-items: center;
  gap: var(--spacing-xs);
}

.navbar__search-input {
  width: auto;
  padding: var(--spacing-xs) var(--spacing-sm);

  background-color: var(--color-bg-main);
  border: none;
  border-radius: 12px;
}

.navbar__search-input::placeholder {
  color: var(--text-color-light);
}

.navbar__search-input:focus {
  outline: none;
  border: none;
}

.navbar__search-button {
  width: 30px;
  height: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--color-bg-main);
  border-radius: 50%;
  transition: var(--transition);
}

.navbar__search-button:hover {
  background-color: #6188A2;
  color: var(--primary-color);
}

.navbar__icons {
  display: flex;
  align-items: center;
  gap: var(--spacing-xs);
}

.navbar__icon {
  width: 30px;
  height: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--color-bg-main);
  border-radius: 50%;
  transition: var(--transition);
}

.navbar__icon--blue {
  background-color: #6188A2;
  color: var(--text-color-white);
}

.navbar__icon:hover {
  background-color: #6188A2;
  color: var(--text-color-white);
}

.navbar__profile {
  display: flex;
  align-items: center;
  gap: var(--spacing-xs);
}

.navbar__profile-img {
  width: 35px;
  height: 35px;
}

.navbar__profile-info {
  display: flex;
  flex-direction: column;
}

.navbar__profile-name {
  font-size: 0.9rem;
}

.navbar__profile-link {
  font-size: 0.6rem;
  transition: var(--transition);
}

.navbar__profile-link:hover {
  color: #6188A2;
}

/* Styles Hero Section */
.hero {
  position: relative;

  margin-top: var(--spacing-md);
  padding: 0 var(--spacing-lg);

  min-height: 75vh;
  
  background: linear-gradient(to right, #A7C5D0, #A9C8DA);
}

.hero__background-wrapper {
  position: absolute;
  inset: 0;
  overflow: hidden;
  z-index: 0;
}

.hero__background-text {
  position: absolute;
  top: -25%;
  font-family: 'PlayFair';
  font-size: 30vw;
  font-weight: 700;
  color: #9FC0D1;
  opacity: 0.6;
}

.hero__background-text:nth-child(1) {
  left: 25%;
}

.hero__background-text:nth-child(2) {
  right: 0;
}

/* *****************
*                  *
*   Media Queries  *
*                  *
* ******************
*/

@media (max-width: 992px) {
  .navbar__search {
    display: none;
  }

  .navbar__profile-info {
    display: none;
  }
}

@media (max-width: 768px) {
  .navbar__menu {
    display: none;
  }

  .navbar__search {
    display: none;
  }

  .navbar__profile {
    display: none;
  }
}

